left: fix missing border when three panes are open

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -347,6 +347,8 @@
             }
             /// Right -> Fix the width with three open panes.
             &.three > ._37f_5 { width: calc(100% + 1px) }
+            /// Left -> Add missing borders to some panes.
+            &.three ._2t4Ic { border-right: 1px solid bd }
         }
     }
 
@@ -829,8 +831,6 @@
             /// Version info.
             ._357v7 { c: fg }
         }
-        /// Left -> Add missing borders to some panes.
-        &._2t4Ic { border-right: 1px solid bd }
     }
 
     // App -> Right.
